@@ -1,4 +1,0 @@
-DIST etcproposals-1.4.tar.gz 53684 RMD160 9e755522fce42b5ca8e51d179c3e36e1c1685aa4 SHA1 6823aa5a39ac8d0f1c7006739d5cbfcd89ab901f SHA256 04a1af1fe5888500495fbf2585f5322b2a38935422f4889d4040008ee794858c
-EBUILD etcproposals-1.4.ebuild 984 RMD160 8dabdb66d6aa3051638312fabe5514d0e855ecfa SHA1 c9388aa3972cf0d89bc3bb23802e7947b26a3556 SHA256 43cfef4cdf3fb7d2daa9eade7413613f50e1e9998fe723c6170a31d9505d2f1e
-MISC ChangeLog 2049 RMD160 2464eb43d26d80d34e0f378b91d97513012f8167 SHA1 982dbe8dbffcc79086f4bb1cf788b68fd858ba54 SHA256 a1d600ae581cb612f3709667538fddf553bfb1f47a4742d6dac8bae770d8306e
-MISC metadata.xml 170 RMD160 645927a396fdc21cdeb089fe42c5397332420ea6 SHA1 ac7f48a14fec325926f9ce1be8fbf1f311b4f2e4 SHA256 d797a2ec6f9dc516c9f9c1a758ee87ad3e8c43101b5dc76c2f872d5bd4639b42
