@@ -1,6 +1,6 @@
-AUX ktigcc.desktop 222 RMD160 458fc252b597a458ab51805ee6ef0d666906bf44 SHA1 b62e4f967be4f96a65289a4623151603504a2487 SHA256 16071fb929d3e4e4b766acadbf5c9041946f3c19258b7bc189f4560c14647b4b
+AUX ktigcc.desktop 196 RMD160 9b9e175fe5e43bbe403344c975cc357808ed817f SHA1 f14aa204e760b301aecd3d9ec49bc670aea4c60c SHA256 95c16ab4abf55ece409c3ed0cb5f01f400216d8e0b47cf7070ad06295dd373b6
 AUX ktigcc.xml 304 RMD160 6675399d4552b1a8343bf6bd3211be0aadd814de SHA1 67550ed16742db967bb87c889a8b7da89b769e83 SHA256 ea7eff450b33bd041cbf980f2925ce9d2ad8025a70625473541f65163d7dc735
-AUX x-tigcc-project.desktop 182 RMD160 888950fe81dd2f0a2c7d5d4faf45c63b4f185f0c SHA1 d06e8d6e0ac20fda6c3a1cbe8e711443e7066910 SHA256 6cab24a4d5bd8e9288791007e6c0bbd22b751bf8c0680b7fefbc29bd5ecd3550
+AUX x-tigcc-project.desktop 137 RMD160 b1c9450d478db9b5b6dde740dd48e17a19d487b9 SHA1 9dacc472f0040f03000f5ab2b99e80037fc3e422 SHA256 2fd3d5727fa01b70d52d0fb2b6a688816d9417518b9f76e9ee330a40097e814d
 DIST ktigcc-1.08.tar.bz2 147671 RMD160 8885f54c9c011b5d3036c8a41f73aebe3327bcda SHA1 807a9872ff98c4ea69d77ae07365ba5b28d769f9 SHA256 351962868d34393c74e3a89ed616dfb2607e2263b4deeae177483af5c6e72a60
 EBUILD ktigcc-1.08.ebuild 1501 RMD160 15b7ffc8f0c6429b20589933cb1fa136c99e6d74 SHA1 24e2aaa6fbf3c580d28aca27b7609dd1ded50c1d SHA256 4676eee342d106e4d8da84b085eac5e6c9fc288a9cc76ccdc792e6d586ec939c
 MISC ChangeLog 1336 RMD160 a4a964dc2e5abc54be0ff6ba30eba4512e0b77f7 SHA1 26460d700dfc4fd85581664c4f5c90d1a37ec716 SHA256 a20c433bfcc4f6eb0f6302f526207d70f4c4118980aa264f8aa4a9d2a29acbf0
