@@ -1,5 +1,4 @@
 [Desktop Entry]
-Encoding=UTF-8
 Version=1.0
 Name=KTIGCC
 Comment=KTIGCC - an IDE for TIGCC
@@ -7,6 +6,5 @@ Exec=ktigcc
 Icon=ktigcc
 Terminal=false
 Type=Application
-Categories=Application;Development;
+Categories=Development;IDE;
 MimeType=application/x-tigcc-project;
-
