@@ -1,4 +1,4 @@
 DIST fim-0.1-alpha.tar.gz 322767 RMD160 96d000d0618b0a72eeff0c87879871e6ef8c39e4 SHA1 f5f5471ca45b33f79e39a34f29308470f0d7db98 SHA256 85a212dde0b68caa2b14cfa492700676add893a137daa866a6e425c29c01f177
-EBUILD fim-0.1_alpha.ebuild 1304 RMD160 bde8d3523b7f37d1482831e3aee3f252531ebaf4 SHA1 9ed4cecdce3852dce088a250e5dd8799bcdebe98 SHA256 62ab168bcf99a16652c0d1d1f5a224f9b95f5b3b076e4d10f2d2ca1ea9d8d888
-MISC ChangeLog 325 RMD160 ab437ca3ad9b92b56a8772b13232072f1ec54f11 SHA1 c20302d17c54965965254f2c67de67cd7a05489f SHA256 d096b4f29de5d0c5a1b57e565bc8677e0422deb72bc57564cb942ff212b7d6e3
+EBUILD fim-0.1_alpha.ebuild 1333 RMD160 a6416a3a0c829d36f9dc465095abe91d8093884c SHA1 0cca10516d6e5014fedad091764bccf118f44f41 SHA256 66fa69b6f34f439bdde8bdba08f5b4320e8a1b62b882654fcee80793fc91e610
+MISC ChangeLog 463 RMD160 002fd4453b83fb3273b496419d8c4f02f0db36f4 SHA1 1146ce6c4c74be40056169efd00619c9099358c8 SHA256 0c818f979525d177e4b96fe04e2628fef6e0293ce1367a86032e263761f41d67
 MISC metadata.xml 170 RMD160 645927a396fdc21cdeb089fe42c5397332420ea6 SHA1 ac7f48a14fec325926f9ce1be8fbf1f311b4f2e4 SHA256 d797a2ec6f9dc516c9f9c1a758ee87ad3e8c43101b5dc76c2f872d5bd4639b42
