@@ -1,58 +1,0 @@
-# ChangeLog for app-portage/etcproposals
-# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: $
-
-  30 Dec 2007; Björn Michaelsen (Sweetshark) <bjoern.michaelsen@gmail.com
-  ++, -etcproposals-1.3.ebuild:
-  Updated etcproposals to 1.4 release
-
-  20 Jun 2007; Jakub Moc <jakub@gentoo.org> etcproposals-1.3.ebuild:
-  Nuke redundant dodir; einfo -> elog
-
-  06 Jun 2007; Björn Michaelsen (Sweetshark) <bjoern.michaelsen@gmail.com>
-  -etcproposals-1.2.1.ebuild, +etcproposals-1.3.ebuild:
-  etc-proposals version bumped to 1.3
-
-  19 May 2007; Ali Polatel (hawking) <polatel@gmail.com>
-  etcproposals-1.2.1.ebuild:
-  Remove whitespace in indentation, make pcheck happy
-
-  09 May 2007; Björn Michaelsen (Sweetshark) <bjoern.michaelsen@gmail.com>
-  -etcproposals-1.2.ebuild, +etcproposals-1.2.1.ebuild:
-  etc-proposals version 1.2.1 bugfix release
-
-  06 May 2007; Ali Polatel (hawking) <polatel@gmail.com>
-  -etcproposals-1.1.ebuild:
-  drop old
-
-  05 May 2007; Björn Michaelsen (Sweetshark) <bjoern.michaelsen@gmail.com>
-  +etcproposals-1.2.ebuild:
-  bump to version 1.2 with Qt4 support
-
-  17 Apr 2007; Bjoern Michaelsen (Sweetshark) <bjoern.michaelsen@gmail.com>
-  etcproposals-1.1.ebuild:
-  Fixing SRC_URI and HOMEPAGE for etcproposals because old server is unavailable
-
-  01 Mar 2007; Christian Faulhammer <opfer@gentoo.org>
-  etcproposals-1.0.ebuild:
-  add gtk USE flag as in the revised ebuild from bug 155546
-
-  01 Mar 2007; Charlie Shepherd <masterdriverz@gentoo.org>
-  -etcproposals-0.9.20061114.ebuild, +etcproposals-1.0.ebuild:
-  Bump to 1.0
-
-  20 Feb 2007; Markus Ullmann <jokey@gentoo.org>
-  etcproposals-0.9.20061114.ebuild:
-  New HOMEPAGE and SRC_URI
-
-  23 Jan 2007; Christian Faulhammer <opfer@gentoo.org>
-  etcproposals-0.9.20061114.ebuild:
-  change from elog to einfo
-
-  23 Jan 2007; Christian Faulhammer <opfer@gentoo.org>
-  etcproposals-0.9.20061114.ebuild:
-  corrected header; don't depend on sys packages as Portage
-
-  19 Nov 2006; Jakub Moc <jakub@gentoo.org> ChangeLog:
-  Initial ebuild for Bug 155546.
-
